--- a/week1/Homework/index.css
+++ b/week1/Homework/index.css
@@ -12,7 +12,7 @@ body{
 .main-content{
     min-height: 100vh;
     width: 80%;
-    margin: 2.5em auto;
+    margin: 0.2rem auto;
     display: grid;
     grid-template-columns: repeat(7, 1fr);
 }
@@ -34,7 +34,7 @@ body{
 
 .profile{
     width:100%;
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid rgb(13, 80, 20);
 }
 
 .image{
@@ -62,10 +62,11 @@ body{
 }
 
 .portfolio ul li{
-    padding: 0.4rem 0;
+    padding: 0.3rem 0;
     display: flex;
     align-items: center;
     color: white;
+    font-size: 1.1rem;
 }
 .portfolio span{
     color: aquamarine;
@@ -129,7 +130,7 @@ body{
 
 
 }
-
+ 
 .right-tl-content{
     padding-bottom: 2rem;
 }
