--- a/week1/Homework/index.css
+++ b/week1/Homework/index.css
@@ -34,7 +34,7 @@ body{
 
 .profile{
     width:100%;
-    border-bottom: 1px solid rgb(13, 80, 20);
+    /* border-bottom: 1px solid rgb(13, 80, 20); */
 }
 
 .image{
@@ -151,8 +151,6 @@ body{
 
 .progress{
     height: 100%;
-    position: absolute;
-    left: 0;
     background-color: rgb(42, 126, 204);
     border-radius: 12px;
 }
