--- a/week2/Homework/index.css
+++ b/week2/Homework/index.css
@@ -503,7 +503,7 @@ li {
   }
 
   .text {
-    overflow: auto;
+    overflow: scroll;
   }
 }
 @media only screen and (max-width: 768px) {
@@ -528,7 +528,7 @@ li {
     visibility: hidden;
   }
 
-  ß .head {
+   .head {
     margin-left: 50%;
     font-size: 1.5rem;
   }
